syschan works, patron-to-library not so much

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -99,13 +99,13 @@ $('document').ready(function(){
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
-  <!-- Not displayed on any page except lightning (at the moment) -->
+  <!-- Not displayed on any page except lightning (at the moment), also used for chat -->
 <div id="header-right">
       <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a></div>
   <div id="patron-info">
-      <p><TMPL_VAR NAME="username"></p>
+      <div id="username"><TMPL_VAR NAME="username"></div>
       <p id="library_name"><TMPL_VAR NAME="library"></p>
-      <p id="lid"><TMPL_VAR NAME="lid"></p>
+      <div id="lid"><TMPL_VAR NAME="lid"></div>
   </div>
 
   </div><!--Div header-right-->
