--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -6,7 +6,7 @@
 
 
 <script type="text/javascript">
-set_secondary_tab("menu_patrons");
+set_secondary_tab("menu_patrons_info");
 
 $.ajaxSetup ({  
   cache: false  
