--- a/templates/submenu_patrons.tmpl
+++ b/templates/submenu_patrons.tmpl
@@ -1,9 +1,15 @@
-<!-- Submenu: myaccount -->
+<!-- Submenu: patrons -->
 
 <!--div id="submenu"-->
 <div id="csssubmenu">
   <ul>
-    <li id="menu_patrons">
+    <li id="menu_patrons_chat">
+      <a href=/cgi-bin/patrons.cgi?rm=chat_form>
+      Chat
+      </a>
+    </li>
+
+    <li id="menu_patrons_info">
       <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
       Patron list
       </a>
