--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -34,7 +34,7 @@
 #csssubmenu ul
 {
   	text-align: center;
-  	margin: 0em;
+  	margin-top: .5em;
   	padding-bottom: 0em;
   	list-style: none;
 }
@@ -53,7 +53,7 @@
   	margin: 0em;
   	background-color: #06a0ca;
   	color: #fff;
-  	padding: 3px ;
+  	padding: .3em ;
   	text-decoration: none ;
   	display: inline ;
 }
@@ -64,8 +64,8 @@
 #csssubmenu li.current_tab a
 {
   	color: #000 ;
-  	background-color: #fff ;
-  	padding: 3px ;
+  	background-color: #f3f3f3 ;
+  	padding: .3em ;
   	text-decoration: none ;
   	display: inline ;
 }
