--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -24,9 +24,9 @@
 
 #csssubmenu {
   background-color: #06a0ca;
-	margin-bottom: 1em;
+	margin: 1em;
   padding-top: .5em;
-	width: 100%;
+  width: 100%;
 	height: auto;
 	font-size: 1.2em;
 	clear: both;  /* start fresh with floatiness within the container */
