--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -124,7 +124,7 @@ $('document').ready(function(){
   </div>
 </div>
 
-<nav role="navigation">
+<nav role="navigation" id="lib-nav">
   <ul class="nav inline-items">
     <li id="menu_borrow">
       <a href="/cgi-bin/lightning.cgi?rm=lightning_search_form">
