div test worked, now checking adding margin

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -186,9 +186,9 @@
 }
 
 #center {
+  margin-top: 1em;
   display: block;
   clear: left;
-  background: red;
 }
 
 /***---End of new library client side CSS--**/
