id="center" added to templates in search

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -348,7 +348,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
