--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -181,7 +181,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div>
       <h3>Specify a date range</h3>
