--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -30,7 +30,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <form action="/cgi-bin/lightning.cgi" method="post">
       <div id="midcolumncontainer">
