--- a/templates/search/request.tmpl
+++ b/templates/search/request.tmpl
@@ -20,7 +20,7 @@
   }
 </script>
 
-<div role="main">
+<div id="center" role="main">
 
     <form METHOD=POST ACTION="">
       <TMPL_IF NAME=error_sendmail>
