--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -20,7 +20,7 @@
   }
 </script>
 
-<div id="main">
+<div id="center" id="main">
 
     <TMPL_IF name="multiple_copies">
       <h2>Your requests have been placed</h2>
