--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -71,7 +71,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <h3>Unfilled codes</h3>
     <table id="fill-table">
