--- a/templates/search/returns.tmpl
+++ b/templates/search/returns.tmpl
@@ -61,7 +61,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
