id="center" added to templates 2

--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -93,7 +93,7 @@ $('document').ready(function(){
 
 </script>
 
-<div role="main">
+<div id="center" role="main">
     <h2>Instructions</h2>
     <ol>
       <li>Click on the barcode column to enter the barcode from your ILS.</li>
