--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -155,7 +155,7 @@ function set_secondary_tab(tab_id) {
 
 </script>
 
-<div role="main">
+<div id="center" role="main">
   <h3>Test my zServer</h3>
 
   <div id="waitDiv">
