--- a/templates/rotations/at_my_library.tmpl
+++ b/templates/rotations/at_my_library.tmpl
@@ -54,7 +54,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="myDiv">
       <h3>At my library</h3>
