--- a/templates/myaccount/reports/ILL_graphs_report.tmpl
+++ b/templates/myaccount/reports/ILL_graphs_report.tmpl
@@ -17,7 +17,7 @@
 </p>
 
 </table>
-<p>Note that Maplin can only track the number of requests made, not whether those requests were filled.</p>
+<p>Note that fILL can only track the number of requests made, not whether those requests were filled.</p>
 <br>
 <p>Report generated at <TMPL_VAR NAME=gendate></p>
 <p>Return to <a href="?rm=myaccount_reports_form">report selection</a>.</p>
