--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -7,7 +7,7 @@
   //-->
 </script>
 
-<div role="main">
+<div id="center" role="main">
   <h4><TMPL_VAR NAME="status"></h4>
   <form METHOD=POST ACTION="">
     <input TYPE="hidden" NAME="lid" VALUE="<TMPL_VAR NAME=editLID>">
@@ -57,17 +57,6 @@
 
     <table id="fill-table">
       <tr>
-	<td>
-	  <TMPL_IF NAME="editRequestEmailNotification">
-	    <input TYPE="radio" NAME="request_email_notification" VALUE='t' CHECKED>Yes<br/>
-	    <input TYPE="radio" NAME="request_email_notification" VALUE='f'>No<br/>
-	  <TMPL_ELSE>
-	    <input TYPE="radio" NAME="request_email_notification" VALUE='t'>Yes<br/>
-	    <input TYPE="radio" NAME="request_email_notification" VALUE='f' CHECKED>No<br/>
-	  </TMPL_IF>
-	</td>
-	<td>Do you want to receive email notifications for new requests? (CURRENTLY UNAVAILABLE)</td>
-      </tr><tr>
 	<td>
 	  <TMPL_IF NAME="editSlipsWithBarcodes">
 	    <input TYPE="radio" NAME="slips_with_barcodes" VALUE='t' CHECKED>Yes<br/>
