--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -94,7 +94,7 @@ function downloadMarc() {
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="myDiv">
       <h3>Receive rotation titles</h3>
