further updates to welcome

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,8 +1,8 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
 <main id="main-left" class="tone-box" role="main">
-	<h1>Welcome</h1>
-	<p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary loan requesting system.</p>
+	<h2>Quick Links</h2>
+	
 	<h3>fILL User's Guide</h3>
 	<p>The fILL User's Guide can be found under the "Info" tab, in the "Documents" subtab.</p>
 	<h3>Links to Counting Opinions</h3>
@@ -25,10 +25,13 @@
 	<p style="text-decoration : underline;"><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p>
 	
 	<p>Information for you:</p>
-	<p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
+	<p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
 </main>
 
 	<div id="main-right" class="tone-box" role="complimentary">
+	<h2>Updates</h2>
+	<strong>24th September 2014</strong>
+	<hr>
 		<h3>Accidentally said "Will-Supply"?</h3>
 		<p>The Shipping screen now has an <strong>Oops! Return this to the Respond list</strong> button.</p>
 		<p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p>
