--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,37 +1,35 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-<main id="main-left" class="tone-box" role="main">
+<div id="main-left" class="tone-box" role="main">
 	<h2>Quick Links</h2>
+
+	<p><strong>Links to Counting Opinions</strong></p>
+	  <a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a>
+	  <a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a>
+	  <a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a>
+	<a href="http://mb.countingopinions.com/index.php?page_id=4">eLibraries Manitoba monthly statistics</a> 
 	
-	<h3>fILL User's Guide</h3>
-	<p>The fILL User's Guide can be found under the "Info" tab, in the "Documents" subtab.</p>
-	<h3>Links to Counting Opinions</h3>
-	<ul>
-	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
-	  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
-	  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
-	</ul>
-	<p><a href="http://elm.lib.overdrive.com/">eLibraries Manitoba</a> monthly statistics can be found at the bottom of the <a href="http://mb.countingopinions.com/index.php?page_id=4">Counting Opinions Ready Reports</a> page.</p>
+	<!--
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
-	
-	<h3>Public fILL</h3>
-	
-	<p>Public access to fILL is available to your patrons using the following URL:</p>
-	<p style="text-decoration : underline;"><a href="http://fill.gets-it.net">http://fill.gets-it.net</a></p>
-	
-	<p>Information for your patrons:</p>
-	<p style="text-decoration : underline;"><a href="/Patron_Guide.pdf">Patron brochure</a></p>
-	<p style="text-decoration : underline;"><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p>
-	
-	<p>Information for you:</p>
-	<p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
-</main>
+	-->
 
-	<div id="main-right" class="tone-box" role="complimentary">
+	<p><strong>Public fILL</strong></p>
+	<p><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></p>
+	<p><a href="/Patron_Guide.pdf">Patron brochure</a></p>
+	<p><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p>
+	<p><strong>Library fILL</strong></p>
+	<p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
+
+	<strong>More Info</strong>
+	<p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents>Info</a></p>
+</div>
+
+<div id="main-right" class="tone-box" role="complimentary">
 	<h2>Updates</h2>
-	<strong>24th September 2014</strong>
 	<hr>
+	<strong>24th September 2014</strong>
+	
 		<h3>Accidentally said "Will-Supply"?</h3>
 		<p>The Shipping screen now has an <strong>Oops! Return this to the Respond list</strong> button.</p>
 		<p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p>
@@ -46,7 +44,8 @@
 		<p>This will make it easier for you to try the next lender or cancel the request.</p>
 		<p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order.  The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
 		
-		
+		<hr>
+		<strong>15th August 2014</strong>
 		<h3>Holds</h3>
 		<p>fILL now supports holds handling, in the ILL-standard way!</p>
 		<p>The User's Guide has been updated with more-detailed information, but here are the highlights:</p>
@@ -55,10 +54,14 @@
 		
 		<p>When requesting an ILL, you can now ask the lender if they are willing to place a hold on the title for you.  If the lender places a hold (in their ILS) for you, that request will show up in the new <strong>Borrowing | Holds Placed</strong> tab. When they ship the item, the request automatically moves to your Borrowing | Receiving tab.</p>
 		
+		<hr>
+		<strong>11th July 2014</strong>
 		<h4>Lending: Placing holds</h4>
 		
 		<p>Your Lending | Respond list gives you a new option: "Hold placed".  If the borrower has asked if you are willing to place a hold for them, you can (at your discretion) place the hold in your ILS and then indicate here that you've done so.  Any holds you've placed will show up in the new <strong>Lending | On hold</strong> tab.  When the hold is ready, mark it as "Ready to ship" and it will move to your Lending | Shipping list.
 		</p>
+		<hr>
+		<strong>More...</strong>
 	</div>	
 
 <TMPL_INCLUDE NAME="footer.tmpl">
