--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -3,26 +3,31 @@
 <div id="main-left" class="tone-box" role="main">
 	<h2>Quick Links</h2>
 
-	<p><strong>Links to Counting Opinions</strong></p>
-	  <a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a>
-	  <a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a>
-	  <a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a>
-	<a href="http://mb.countingopinions.com/index.php?page_id=4">eLibraries Manitoba monthly statistics</a> 
-	
+	<p><strong>Counting Opinions</strong></p>
+	<ul>
+	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
+	  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
+	  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
+	  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">eLibraries Manitoba monthly statistics</a></li>
+	</ul>
 	<!--
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 	-->
 
 	<p><strong>Public fILL</strong></p>
-	<p><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></p>
-	<p><a href="/Patron_Guide.pdf">Patron brochure</a></p>
-	<p><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p>
+	<ul>
+	<li><p><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></p></li>
+	<li><p><a href="/Patron_Guide.pdf">Patron brochure</a></p></li>
+	<li><p><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p></li>
 	<p><strong>Library fILL</strong></p>
-	<p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
+	<li><p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p></li>
+	</ul>
 
 	<strong>More Info</strong>
-	<p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents>Info</a></p>
+	<ul>
+	<li><p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents>Info</a></p></li>
+	</ul>
 </div>
 
 <div id="main-right" class="tone-box" role="complimentary">
