fixes to new fill-library table

--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -9,7 +9,7 @@
 
 <h2>Documents</h2>
 
-<table id="fill-table">
+<table id="fill-table" class="fill-library">
   <tr>
     <td>
       <h3>fILL Interlibrary Loan Management</h3>  
