--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -191,8 +191,8 @@
   clear: left;
 }
 
-.library-table {
-  width: 100%;!important
+.table-width-lib {
+  width: 90%;
 }
 
 /***---End of new library client side CSS--**/
