<div id="center" role="main"> added to other pages

--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -7,6 +7,8 @@
   //-->
 </script>
 
+<div id="center" role="main">
+
 <h2>Documents</h2>
 
 <table id="fill-table" class="table-width-lib">
@@ -81,5 +83,5 @@
     </td>
   </tr>
 </table>
-
+</div>
 <TMPL_INCLUDE NAME="footer.tmpl">
