--- a/templates/info/feeds.tmpl
+++ b/templates/info/feeds.tmpl
@@ -7,7 +7,9 @@
   //-->
 </script>
 
-<h1>Library news feeds</h1>
+<div id="center" role="main">
+
+<h2>Library news feeds</h2>
 
 <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fmla.mb.ca%2Fnews%2FRSS&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
 <noscript>
@@ -31,6 +33,6 @@
 <noscript>
 <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Ffeeds.feedburner.com%2Fcla%2Fnews&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
 </noscript>
-
+</div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
