--- a/templates/info/reports.tmpl
+++ b/templates/info/reports.tmpl
@@ -226,7 +226,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
   <div lid=<TMPL_VAR name="lid">>
 
