--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -65,7 +65,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="waitDiv">
       Calculating averages for each library over the last 3 months... <img src="/wait.gif">
