--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -60,7 +60,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="myDiv">
       <h3>Library contact information</h3>
