--- a/templates/info/report-folder.tmpl
+++ b/templates/info/report-folder.tmpl
@@ -124,7 +124,7 @@ $('document').ready(function(){
 
 </script>
 
-<div role="main">
+<div id="center" role="main">
 
   <div lid=<TMPL_VAR name="lid">>
 
