--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -46,7 +46,7 @@ $('document').ready(function(){
 </script>
 
 
-<div role="main">
+<div id="center" role="main">
 
     <div id="myDiv">
       <h2>ILL Stats</h2>
