footer fix and small fix

--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -76,7 +76,7 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
   </div>
 
-  <div id="instructions">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ul>
     <li>This report looks at historic requests (those that have completed their life cycles) for the last 3 months.</li>
