adding breaks <br />

--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -183,7 +183,7 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
-    <div>
+    <div><br />
       <h3>Specify a date range</h3>
       <form>
 	<table cellspacing="20">
