--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -73,7 +73,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv">
+    <div id="myDiv"><br />
       <h3>Holds - the lending libraries have placed holds in their ILS for the following titles:</h3>
       <div id="mylistDiv"></div>
     </div>
