--- a/templates/search/request.tmpl
+++ b/templates/search/request.tmpl
@@ -28,7 +28,7 @@
 	<h2>We've had a problem sending the email automatically</h2>
 	<p>fILL has encountered a problem sending this request.</p>
 	<p>You can send this request manually by using your
-	  own email program (eg: GMail, Outlook, Hotmail, etc).</p>
+	  own email program (eg: Gmail, Outlook, Hotmail, etc).</p>
 	<ol>
 	  <li>Create a new email to the destination library (you can copy the email address from the "To:" field, below)</li>
 	  <li>Copy the information in the "Subject:" line, below, into the subject of your new email.</li>
