--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -95,7 +95,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv">
+    <div id="myDiv"><br />
       <h3>Respond to requests</h3>
       <div id="mylistDiv"></div>
     </div>
