--- a/templates/search/on_hold.tmpl
+++ b/templates/search/on_hold.tmpl
@@ -68,7 +68,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv">
+    <div id="myDiv"><br />
       <h3>Items waiting for hold fulfillment</h3>
       <div id="mylistDiv"></div>
     </div>
