added <br /> and new table class

--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -72,9 +72,9 @@ $('document').ready(function(){
 
 
 <div id="center" role="main">
-
+<br />
     <h3>Unfilled codes</h3>
-    <table id="fill-table">
+    <table id="fill-table" class="table-width-lib">
       <tr><td style="border:1px solid black;">in-use /on-loan</td><td style="border:1px solid black;">Currently checked out to a patron.</td></tr>
       <tr><td style="border:1px solid black;">in-process</td><td style="border:1px solid black;">Not ready for loan.</td></tr>
       <tr><td style="border:1px solid black;">lost</td><td style="border:1px solid black;">Item has been declared missing.</td></tr>
@@ -95,7 +95,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv"><br />
+    <div id="myDiv">
       <h3>Respond to requests</h3>
       <div id="mylistDiv"></div>
     </div>
