new circle shadow

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -182,7 +182,7 @@
   height: .7em;
   color: #fff;
   background-color: #ff0000;
-  box-shadow: 1px 1px 2px #b3b3b3;
+  box-shadow: 1px 1px 3px #999;
 }
 
 #center {
